--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<!-- Google tag (gtag.js) -->
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=G-W7J3MSJ4DV"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag('js', new Date());
+
+			gtag('config', 'G-W7J3MSJ4DV');
+		</script>
 		<meta charset="utf-8" />
 		<link
 			rel="icon"
