--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 			content="Explore a collection of my diverse web development and design projects. From responsive websites to interactive web applications, discover my skills, creativity, and passion for delivering exceptional digital experiences." />
 		<meta
 			name="keywords"
-			content="web development, front-end development, JavaScript, HTML, CSS, responsive design, web design, portfolio, projects, coding, software development, programming, Hossam Mahmoud, Hossam, hossam mahmoud portfolio, hossam, hossam mahmoud, Hossam Mahmoud Portfolio" />
+			content="front-end development, web development, Hossam Mahmoud, Hossam, hossam mahmoud portfolio, hossam, hossam mahmoud, Hossam Mahmoud Portfolio, JavaScript, HTML, CSS, responsive design, web design, portfolio, projects, coding, software development, programming " />
 		<link
 			rel="apple-touch-icon"
 			href="%PUBLIC_URL%/Logo.png" />
