--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 			content="Explore a collection of my diverse web development and design projects. From responsive websites to interactive web applications, discover my skills, creativity, and passion for delivering exceptional digital experiences." />
 		<meta
 			name="keywords"
-			content="front-end development, web development, Hossam Mahmoud, Hossam, hossam mahmoud portfolio, hossam, hossam mahmoud, Hossam Mahmoud Portfolio, JavaScript, HTML, CSS, responsive design, web design, portfolio, projects, coding, software development, programming " />
+			content="front-end development, web development, Harish, Harish K  Shetty, Harish Shetty portfolio, harish, harish k shetty, harish shetty Portfolio, JavaScript, HTML, CSS, Reactjs, Nextjs, Redux responsive design, web design, portfolio, projects, coding, software development, programming " />
 		<link
 			rel="apple-touch-icon"
 			href="%PUBLIC_URL%/Logo.png" />
@@ -49,7 +49,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-		<title>Hossam Mahmoud</title>
+		<title>Harish Shetty</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
